log.txt
Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 67, in on_message
    response["intvar"] = to_sympy(answer.content)
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\parse.py", line 21, in to_sympy
    return parse_expr(message, transformations=transformations,
  File "C:\Users\KenoK\Anaconda3\envs\gaussbot\lib\site-packages\sympy\parsing\sympy_parser.py", line 1008, in parse_expr
    return eval_expr(code, local_dict, global_dict)
  File "C:\Users\KenoK\Anaconda3\envs\gaussbot\lib\site-packages\sympy\parsing\sympy_parser.py", line 902, in eval_expr
    expr = eval(
  File "<string>", line 1
    \Symbol ('s' )*Symbol ('h' )*Symbol ('o' )*Symbol ('w' )*Symbol ('b' )*e *Symbol ('a' )*Symbol ('u' )*Symbol ('t' )*Symbol ('y' )
                                                                                                                                    ^
SyntaxError: unexpected character after line continuation character

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    if message.attachments.first():
AttributeError: 'list' object has no attribute 'first'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    return do_calculation(message)
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\brain.py", line 239, in do_calculation
    calculation = to_sympy(calculation_part, numerical=True)
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\parse.py", line 44, in to_sympy
    return N(parse_expr(message, transformations=transformations,
  File "C:\Users\KenoK\Anaconda3\envs\gaussbot\lib\site-packages\sympy\parsing\sympy_parser.py", line 1003, in parse_expr
    code = stringify_expr(s, local_dict, global_dict, transformations)
  File "C:\Users\KenoK\Anaconda3\envs\gaussbot\lib\site-packages\sympy\parsing\sympy_parser.py", line 886, in stringify_expr
    input_code = StringIO(s.strip())
AttributeError: 'list' object has no attribute 'strip'

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    await do_calculation(message)
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\brain.py", line 240, in do_calculation
    return message.channel.send("{:.8E}".format(calculation))
TypeError: unsupported format string passed to ComplexInfinity.__format__

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    await do_calculation(message)
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\brain.py", line 240, in do_calculation
    return message.channel.send("{:.8E}".format(calculation))
TypeError: unsupported format string passed to Mul.__format__

Traceback (most recent call last):
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\bot.py", line 77, in on_message
    await do_calculation(message)
  File "C:\Users\KenoK\PycharmProjects\gaussbot\gauss\brain.py", line 240, in do_calculation
    return message.channel.send("{:.8E}".format(calculation))
TypeError: unsupported format string passed to Mul.__format__

